Change style on login page

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Trips app",
-  "name": "App for tracking your trips",
+  "name": "Track your trips with ease",
   "icons": [
     {
       "src": "favicon.ico",
